--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,12 @@ button {
     display: flex;
     flex-wrap: wrap;
 }
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(214, 214, 214);
+    text-align: center;
+ }
